--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,7 +40,7 @@ jobs:
 
       # S3에 압축 파일 업로드
       - name: Upload to S3
-        run: aws s3 cp ./deploy.zip s3://${{ secrets.S3_BUCKET_NAME }}/deploy.zip
+        run: aws s3 cp ./deploy.zip s3://${{ secrets.S3_BACK_BUCKET_NAME }}/deploy.zip
 
       # CodeDeploy 실행
       - name: CodeDeploy
@@ -49,4 +49,4 @@ jobs:
             --application-name myfoodmap \
             --deployment-config-name CodeDeployDefault.AllAtOnce \
             --deployment-group-name myfoodmap-back-deploy \
-            --s-location bucket=${{ secrets.S3_BUCKET_NAME }},bundleType=zip,key=deploy.zip
+            --s-location bucket=${{ secrets.S3_BACK_BUCKET_NAME }},bundleType=zip,key=deploy.zip
