--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js",
+    "build": "esbuild app.js --bundle --platform=node --target=node18 --outfile=dist/index.js"
   },
   "keywords": [],
   "author": "",
@@ -22,6 +23,7 @@
     "prisma": "^5.19.0"
   },
   "devDependencies": {
+    "esbuild": "^0.27.2",
     "nodemon": "^3.1.11"
   }
 }
