--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,6 +25,7 @@ jobs:
           echo "DB_USER=${{ secrets.DB_USER }}" >> .env
           echo "DB_PASS=${{ secrets.DB_PASS }}" >> .env
           echo "DB_NAME=${{ secrets.DB_NAME }}" >> .env
+          echo "FRONT_CF_URL=${{ secrets.FRONT_CF_URL }}" >> .env
 
       # 프로젝트 압축 (appspec.yml과 scripts 폴더 포함 필수)
       - name: Zip project files
